--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
