--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation('org.springframework.boot:spring-boot-starter-validation')
+	implementation('org.springframework.boot:spring-boot-starter-security')
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
@@ -31,6 +32,9 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: "3.0.0"
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: "3.0.0"
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: "0.9.1"
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: "1.4.2.Final"
+	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: "1.4.2.Final"
 
 }
 
