--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:mem:mydb
+#    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:tcp://localhost/~/market
     driver-class-name: org.h2.Driver
     username: sa
     password:
