--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation('org.springframework.boot:spring-boot-starter-validation')
-	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework:spring-context-support'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
@@ -35,6 +36,8 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: "0.9.1"
 	implementation group: 'org.mapstruct', name: 'mapstruct', version: "1.4.2.Final"
 	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: "1.4.2.Final"
+	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+	implementation 'com.sun.activation:javax.activation:1.2.0'
 
 }
 
