fix: 파일명 변경
- admin.jar로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 bootJar {
-	archiveFileName = "${archiveBaseName.get()}-dev.${archiveExtension.get()}"
+	archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
 }
 
 dependencies {
