fix: 브랜치를 파일명으로 반환하도록 변경
- admin-develop.jar로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,13 @@ repositories {
 }
 
 bootJar {
-	archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+	def branch = ""
+	def proc = "git rev-parse --abbrev-ref HEAD".execute()
+	proc.in.eachLine { line -> branch = line }
+	proc.waitFor()
+	archiveFileName = "${archiveBaseName.get()}-${branch}.${archiveExtension.get()}"
 }
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
