--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: "1.4.2.Final"
 	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
 	implementation 'com.sun.activation:javax.activation:1.2.0'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
 }
 
