--- a/src/main/resources/application-datasource.yml
+++ b/src/main/resources/application-datasource.yml
@@ -1,7 +1,8 @@
-server:
-  ip: market-api.kooru.be
-  port: 3001
+---
 spring:
+  config:
+    activate:
+      on-profile: local, dev, test
   h2:
     console:
       enabled: true
@@ -11,3 +12,9 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+---
+spring:
+  config:
+    activate:
+      on-profile: stage, real
+## Mysql로 추후 세팅 필요
