--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,12 @@
 spring:
+  application:
+    name: admin
+  profiles:
+    active: local
+    include:
+      - datasource
+      - admin
+      - logging
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-
----
-
-spring:
-  profiles:
-    active: prod
-
----
-
-spring:
-  profiles:
-    active: dev
-
----
-
-spring:
-  profiles:
-    active: local
