--- a/src/main/resources/application-admin.yml
+++ b/src/main/resources/application-admin.yml
@@ -10,7 +10,7 @@ server:
 spring:
   config:
     activate:
-      on-profile: dev, test
+      on-profile: dev
 server:
   ip: dev-market-api.kooru.be
   port: 3002
